--- a/workflow/main.yaml
+++ b/workflow/main.yaml
@@ -1,8 +1,15 @@
+
 name: Github deployment
+
 on:
   push:
-    branches: 
-           main
+    branches: 'main'
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 
 jobs:
   deploy:
@@ -11,19 +18,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout
+        uses: actions/checkout@v4
       - name: Set up Node
-        uses: actions/setup
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+          
       - name: Install dependencies
         run: npm install
       - name: Build
         run: npm run build
       - name: Setup Pages
-        uses: actions/configure-pages
+        uses: actions/configure-pages@v3
       - name: Upload artifact
-        uses: actions/upload-pages-artifact
+        uses: actions/upload-pages-artifact@v2
         with:
+          
           path: './'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages
+        uses: actions/deploy-pages@v2
