--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "firebase-tools": "^13.3.0",
     "icons": "^1.0.0",
