--- a/workflow/main.yaml
+++ b/workflow/main.yaml
@@ -1,39 +1,48 @@
-name: Deploy Groovy App to GitHub Pages
+name: Github actions workflow
 
 on:
-  # Triggers on pushes to the main branch
   push:
-    branches:
-      - main
+    branches: 'main'
 
-  # Allows manual triggering from the Actions tab
+  
   workflow_dispatch:
 
-# Define permissions
+
 permissions:
   contents: read
   pages: write
+  id-token: write
+
+
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 
 jobs:
+  # Single deploy job since we're just deploying
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Node
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
-
-      - name: Install Dependencies
+          node-version: 16
+          cache: 'npm'
+      - name: Install dependencies
         run: npm install
-
-      - name: Build App
+      - name: Build
         run: npm run build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
