--- a/workflow/main.yaml
+++ b/workflow/main.yaml
@@ -1,48 +1,42 @@
-name: Github actions workflow
+name: Build and Deploy
 
 on:
   push:
-    branches: 'main'
-
-  
-  workflow_dispatch:
-
+    branches: [ main ]
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
-
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Node
-        uses: actions/setup-node@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
-          cache: 'npm'
-      - name: Install dependencies
+          node-version: '16'
+
+      - name: Install Dependencies
         run: npm install
+
       - name: Build
         run: npm run build
+
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: './'
+          path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
