--- a/workflow/main.yaml
+++ b/workflow/main.yaml
@@ -1,83 +1,30 @@
-name: Deploy
-
-on:
-  push:
-    branches: [ 'main' ]
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-   workflow_dispatch:
-
-jobs:
-  deploy:
-    environment:
-      name: github-pages
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node
-        with:
-          node-version: '19'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
-
-      - name: Setup Pages
-        uses: actions/configure-pages
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact
-        with:
-          path: './dist'
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages
 name: Build and Deploy
-
-on:
+'on':
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
+        uses: actions/checkout@v2
       - name: Setup Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@v2
         with:
-          node-version: '19'
-
+          node-version: '14'
       - name: Install dependencies
         run: npm install
-
       - name: Build React app
         run: npm run build
-
   deploy:
     runs-on: ubuntu-latest
-
     needs: build
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
+        uses: actions/checkout@v2
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./build
+
