okay this time it will work

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
-name: github actions
-
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy to github
 on:
   # Runs on pushes targeting the default branch
   push:
